<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weight Tracker</string>
    <string name="input_weight">Input weight (kilogram)</string>
    <string name="add_weight">Add weight</string>
    <string name="edit_weight">Edit weight</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="gender">Gender</string>
    <string name="choose_gender">Choose your gender</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item >Female</item>
    </string-array>
    <string name="pref_title_height">Height (centimeter)</string>
    <string name="input_height">Input your height</string>
    <string name="must_input_weight">Must input your weight before saving!</string>
    <string name="error">Error</string>
    <string name="weight_list">Weight list</string>
    <string name="settings">Settings</string>
    <string name="pref_title_target_weight">Target Weight (kilogram)</string>
    <string name="input_target_weight">Input target weight</string>
    <string name="trend_chart_of_weight">Trend Chart of Weight</string>
    <string name="date">Date</string>
    <string name="weight">Weight</string>
    <string name="comparison_chart_of_weight">Comparison Chart of Weight</string>
    <string name="min_weight">Min Weight</string>
    <string name="max_weight">Max Weight</string>
    <string name="current_weight">Current Weight</string>
    <string name="target_weight">Target Weight</string>
    <string name="kg">kg</string>
    <string name="bmi">BMI</string>
</resources>
