<?xml version="1.0" encoding="utf-8"?>
<com.agimind.widget.SlideHolder xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slide_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dip"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark" >
        <Button
            android:id="@+id/btn_weight_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight_list" />
        <Button
            android:id="@+id/btn_line_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trend_chart_of_weight" />
        <Button
                android:id="@+id/btn_column_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comparison_chart_of_weight" />
        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</com.agimind.widget.SlideHolder>